--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div>
         <div class="animated" id="eight-ball">
-            <p class="animated" id="answer"></p>
+            <div id="answer-window">
+                <p class="animated" id="answer"></p>
+            </div>
         </div>
         <div>
             <div id="shake">Shake</div>
