update to reset shake feature and answer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div>
         <div class="animated" id="eight-ball">
-            <div id="answer-window">
-                <p class="animated" id="answer"></p>
+            <div>
+                <p class="animated"><span id="answer"></span></p>
             </div>
         </div>
         <div>
