--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <div class="animated" id="eight-ball">
             <div>
-                <p class="animated"><span id="answer"></span></p>
+                <p class="animated" id="answer"></p>
             </div>
         </div>
         <div>
