--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Magic 8 Ball</title>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
+
 </head>
 
 <body>
     <div>
+        <h1>Magic 8-Ball</h1>
+    </div>
+    <div>
         <div class="animated" id="eight-ball">
-            <div>
-                <p class="animated" id="answer"></p>
+            <div class="animated" id="answer">
+                <!--<p><br></p>-->
+                <p id="answer-text"></p>
             </div>
         </div>
         <div>
